syntax = "proto3";

package user.v1;

option go_package = "yeyee2901/grpc/gen/user/v1;userpb";

import "proto/user/v1/user.proto";

service UserService {
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse) {};
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
}

message GetUserByIdRequest {
  int64 id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message CreateUserResponse {
  int64  id         = 1;
  string status_msg = 2;
}
